--- a/app/styles/module/store.less
+++ b/app/styles/module/store.less
@@ -1,72 +1,61 @@
 @import '../common/variables.less';
 
 .page-store{
-	.navbar {
-		margin-bottom:0;
-	}
+  .navbar {
+    margin-bottom:0;
+  }
 
-	.menu-bar{
+  .menu-bar{
     z-index:999;
-		height:50px;
+    height:50px;
 
-		.btn {
-			border-radius:0;
-			font-size: 1.5em;
-			border: none;
-			border-right:1px solid #ddd;
-			box-shadow:none;
-			border-bottom:2px solid transparent;
-		}
+    .btn {
+      border-radius:0;
+      font-size: 1.5em;
+      border: none;
+      border-right:1px solid #ddd;
+      box-shadow:none;
+      border-bottom:2px solid transparent;
+    }
 
-		.active {
-			color:@brand-green;
-			background:#fff;
-			border-bottom-color:@brand-green;
-		}
-		.box-shadow(1px,1px,3px,#ddd);
-	}
+    .active {
+      color:@brand-green;
+      background:#fff;
+      border-bottom-color:@brand-green;
+    }
+    .box-shadow(1px,1px,3px,#ddd);
+  }
 
 
-	margin-bottom:50px;
-	height: 100%;
+  margin-bottom:50px;
+  height: 100%;
 }
 
 .wallpaper{
-	.layout-container {
-		height: 160px;
-		overflow: hidden;
-		padding: 0;
-	}
-
-	img{
-		width:100%;
-	}
-
-}
-
-.diy{
-  position: relative;
-  .btn.cy-btn {
-    position: absolute;
-    bottom: -22px;
-    height: 71px;
-    line-height: 53px;
-    width: 420px;
-    left: 28px;
+  .layout-container {
+    height: 160px;
+    overflow: hidden;
+    padding: 0;
   }
+
+  img{
+    width:100%;
+  }
+
 }
+
 
 .theme-preview{
-	clear: both;
+  clear: both;
 }
 
 .layout{
 
-	.col-xs-4 {
-		padding: 0 5px;
-	}
-	.col-xs-6 {
-		padding: 0 2px;
-	}
+  .col-xs-4 {
+    padding: 0 5px;
+  }
+  .col-xs-6 {
+    padding: 0 2px;
+  }
 }
 
